24.0.2
------

24.0.1
------
(RB=1411239)
Make bannedUris field optional

24.0.0
-------
(RB=1411483)
Disable test that fails consistently in TMC and passes consistently in local box

(RB=1410320)
Bump major version and update gradle.properties for release

(RB=1409272)
Refactor some code for ease of access in pemberly-api

(RB=1408119)
Fix test relying on string error message

(RB=1402300)
Implement blocking and non blocking smile data codec

(RB=1344653)
Support returning the entity for PARTIAL_UPDATE resource methods

(RB=1394500)
D2 merging clientOverridesProperties into the serviceProperties at deserialization time.

(RB=1402795)
D2 adding REQUEST_TIMEOUT_IGNORE_IF_HIGHER_THAN_DEFAULT parameter to request context's request

23.0.19
-------
(RB=1398083)
Allow custom users to set overridden partition ids to URIMapper

23.0.18
-------
(RB=1402247)
make aclAwareZookeeper only apply acl if the create mode is EPHEMERAL OR EPHEMERAL_SEQUENTIAL

23.0.17
-------
(RB=1399099)
Avoid double encoding typeref names in resource model encoder.

(RB=1399474)
Fix bug introduced in 22.0.0 during the server refactor which results in NPE for empty request body.

23.0.16
-------
(RB=1393433)
Add "$returnEntity" query parameter to support returning the entity on demand

(RB=1392687)
Added $reorder command for array items to Rest.li patch format.

(RB=1399487)
Log channel inception time when exception is thrown during writeAndFlush

23.0.15
-------
(RB=1394375)
Populate internal DataMap for gathered batch response.

(RB=1396585)
Updated gradle wrapper to version 4.6.

(RB=1396146)
Remove Guava dependency from compile in all modules except data-avro and restli-int-test

(RB=1395504)
Register coercers for custom typed typerefs in the generated TyperefInfo class.

23.0.14
-------
(RB=1393838)
Skip schema validation when the projection mask is empty.

23.0.13
-------
(RB=1391132)
Clean up ProjectionInfo interfaces to hide mutable API.
(RB=1391602)
Fix for reference to internal record.
